--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <main class="main">
       <!-- First section -->
       <section class="heroic section">
-        <div class="container heroic">
+        <div class="container heroi">
           <h1 class="header-main">Effective Solutions for Your Business</h1>
           <button type="button" class="main-btn">Order Service</button>
         </div>
@@ -65,28 +65,28 @@
         <div class="container">
           <h2 class="visually-hidden">Smart growth</h2>
           <ul class="smart-item">
-            <li>
+            <li class="smart-link">
               <h3 class="smart-title">Strategy</h3>
               <p class="smart-ctn">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="smart-link">
               <h3 class="smart-title">Punctuality</h3>
               <p class="smart-ctn">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="smart-link">
               <h3 class="smart-title">Diligence</h3>
               <p class="smart-ctn">
                 Research and confirm brands with the strongest digital growth
                 opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="smart-link">
               <h3 class="smart-title">Technologies</h3>
               <p class="smart-ctn">
                 Design practice focused on digital experiences. We bring forth a
