--- a/index.html
+++ b/index.html
@@ -161,33 +161,45 @@
           <ul class="portfolio-item">
             <li class="portfolio-card">
               <img src="./images/img-5.jpg" alt="ImgBankingApp" width="360" />
-              <h3 class="portfolio-title-card">Banking App</h3>
-              <p class="potrfolio-ctn">App</p>
+              <div class="apl">
+                <h3 class="portfolio-title-card">Banking App</h3>
+                <p class="potrfolio-ctn">App</p>
+              </div>
             </li>
             <li class="portfolio-card">
               <img src="./images/img-4.jpg" alt="ImgPayTerminal" width="360" />
-              <h3 class="portfolio-title-card">Cashless Payment</h3>
-              <p class="potrfolio-ctn">Marketing</p>
+              <div class="apl">
+                <h3 class="portfolio-title-card">Cashless Payment</h3>
+                <p class="potrfolio-ctn">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-card">
               <img src="./images/img-3.jpg" alt="ImgLaptop" width="360" />
-              <h3 class="portfolio-title-card">Meditation App</h3>
-              <p class="potrfolio-ctn">App</p>
+              <div class="apl">
+                <h3 class="portfolio-title-card">Meditation App</h3>
+                <p class="potrfolio-ctn">App</p>
+              </div>
             </li>
             <li class="portfolio-card">
               <img src="./images/img-2.jpg" alt="ImgCar" width="360" />
-              <h3 class="portfolio-title-card">Taxi Service</h3>
-              <p class="potrfolio-ctn">Marketing</p>
+              <div class="apl">
+                <h3 class="portfolio-title-card">Taxi Service</h3>
+                <p class="potrfolio-ctn">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-card">
               <img src="./images/img-1.jpg" alt="ImgPhone" width="360" />
-              <h3 class="portfolio-title-card">Screen Illustrations</h3>
-              <p class="potrfolio-ctn">Design</p>
+              <div class="apl">
+                <h3 class="portfolio-title-card">Screen Illustrations</h3>
+                <p class="potrfolio-ctn">Design</p>
+              </div>
             </li>
             <li class="portfolio-card">
               <img src="./images/img.jpg" alt="ImgStudents" width="360" />
-              <h3 class="portfolio-title-card">Online Courses</h3>
-              <p class="potrfolio-ctn">Marketing</p>
+              <div class="apl">
+                <h3 class="portfolio-title-card">Online Courses</h3>
+                <p class="potrfolio-ctn">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
