--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header">
         <div class="navigation">
           <nav class="menu">
             <a href="./index.html" class="indexlink">Web<span>Studio</span></a>
