adjusted mentor attention

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container header">
+      <div class="container header-container">
         <nav class="menu">
           <a href="./index.html" class="indexlink">Web<span>Studio</span></a>
           <ul class="menu-item">
